--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.1.2",
+    "@angular/cdk": "^6.4.3",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
+    "@angular/material": "^6.4.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^2.2.0",
+    "angular-in-memory-web-api": "^0.6.1",
     "bootstrap": "^4.1.2",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
