--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "@angular/router": "^6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^2.2.0",
     "angular-in-memory-web-api": "^0.6.1",
+    "angular-oauth2-oidc": "^4.0.2",
     "bootstrap": "^4.1.2",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
+    "ng2-file-upload": "^1.3.0",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.3.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
